[gd_scene load_steps=2 format=3 uid="uid://qdgl8co6qy6"]

[ext_resource type="Script" path="res://Scripts/GraphEdit.gd" id="1_r0ncd"]

[node name="GraphEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
connection_lines_curvature = 0.0
connection_lines_thickness = 1.0
zoom = 0.6
zoom_min = 0.035
zoom_max = 1.0
show_zoom_label = true
script = ExtResource("1_r0ncd")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_duplicate_nodes_request"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
